style.css
#header {
    display: flex;
    position: fixed;
    width: 100vw;
    height: 75px;
    border-bottom: 2px solid black;
    top: 0px;
    left: 0px;

    padding-left: 10px;

    background-color: white;

    z-index: 900;
}

.headerTitles {
    margin-top: auto;
    margin-bottom: auto;
    margin-left: 10px;
    margin-right: 10px;
    font-size: 20px;
    color: black;
    text-decoration: none;
}

.bodyText {
  margin-left: 5vw;
  margin-right: 5vw;
}

* {box-sizing: border-box}
.mySlides1, .mySlides2 .mySlides3 {display: none}
img {vertical-align: middle;}

/* Slideshow container */
.slideshow-container {
  max-width: 500px;
  position: relative;
  margin: auto;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: 16px;
  margin-top: -22px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

.prev {
  left: 0px;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a grey background color */
.prev:hover, .next:hover {
  background-color: #f1f1f1;
  color: black;
}

